[package]
name = "aes-stream"
version = "0.2.1"
authors = ["oberien <jaro.fietz@gmx.de>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/oberien/rust-aes-stream"
description = "Read/Write Wrapper for AES Encryption and Decryption during I/O Operations"
keywords = ["Crypto", "AES", "Read", "Write", "Stream"]
readme = "README.md"

[lib]
name = "aesstream"

[dependencies]
rust-crypto = "0.2"
rand = "0.3"
